finish everything except for theming